--- a/css/styles.css
+++ b/css/styles.css
@@ -6367,6 +6367,7 @@ button.close {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-align: center;
 }
 /**
  * Sidebar form
