--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* -------------------------------- 
+/* --------------------------------
 
 Primary style
 
@@ -21,8 +21,8 @@ html * {
 body {
   font-size: 1.6rem;
   font-family: "Bitter", serif;
-  color: #a29cc2;
-  background-color: #3d385a;
+  color: #FFF;
+  background-color: #363636;
 }
 
 @media only screen and (min-width: 1170px) {
@@ -31,7 +31,7 @@ body {
   }
 }
 a {
-  color: #ea4a55;
+  color: #ed2024;
   text-decoration: none;
 }
 
@@ -39,7 +39,7 @@ img {
   max-width: 100%;
 }
 
-/* -------------------------------- 
+/* --------------------------------
 
 Modules - reusable parts of our design
 
@@ -64,11 +64,20 @@ Modules - reusable parts of our design
   font-size: 1.2rem;
   font-family: "PT Sans", sans-serif;
   color: #ffffff;
-  background-color: #685f99;
+  background-color: #1D8BF1;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2);
 }
+
+#cd-start {
+  background-color: #ed2024;
+}
+
+#cd-start:hover {
+  background-color: #0e1027;
+}
+
 .no-touch .cd-btn:hover {
-  background-color: #756da4;
+  background-color: #0e1027;
 }
 @media only screen and (min-width: 1170px) {
   .cd-btn {
@@ -81,9 +90,9 @@ Modules - reusable parts of our design
   }
 }
 
-/* -------------------------------- 
+/* --------------------------------
 
-Main components 
+Main components
 
 -------------------------------- */
 .cd-product {
@@ -272,7 +281,7 @@ Main components
     display: block;
     position: absolute;
     left: 0;
-    background-image: url(../img/cd-app-image.png);
+    background-image: url(../img/screen2.png);
     /* Firefox bug - 3D CSS transform, jagged edges */
     outline: 1px solid transparent;
   }
@@ -390,7 +399,7 @@ Main components
   width: 30px;
   height: 30px;
   border-radius: inherit;
-  background: #ea4a55;
+  background: #ed2024;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5), inset 0 1px 0 rgba(255, 255, 255, 0.3);
   z-index: 2;
   -webkit-transition: background-color 0.3s;
@@ -439,19 +448,27 @@ Main components
   animation: cd-pulse 2s infinite;
 }
 .cd-single-point:nth-of-type(1) {
-  bottom: 58%;
-  right: 40%;
+  bottom: 62%;
+  right: 24%;
 }
 .cd-single-point:nth-of-type(2) {
-  top: 6%;
-  right: 5%;
+  top: 24%;
+  right: 17%;
 }
 .cd-single-point:nth-of-type(3) {
-  top: 6%;
-  left: 14%;
+  top: 34%;
+  left: 24%;
+}
+.cd-single-point:nth-of-type(4) {
+  bottom: 49%;
+  right: 24%;
+}
+.cd-single-point:nth-of-type(5) {
+  top: 47%;
+  left: 24%;
 }
 .cd-single-point.is-open > a {
-  background-color: #685f99;
+  background-color: #0e1027;
 }
 .cd-single-point.is-open > a::after, .cd-single-point.is-open > a::before {
   -webkit-transform: translateX(-50%) translateY(-50%) rotate(135deg);
@@ -477,7 +494,7 @@ Main components
   transition: opacity 0.3s 0s, visibility 0s 0s, transform 0.3s 0s, top 0.3s 0s, bottom 0.3s 0s, left 0.3s 0s, right 0.3s 0s;
 }
 .cd-single-point.visited > a {
-  background-color: #685f99;
+  background-color: #0e1027;
 }
 .cd-single-point.visited::after {
   /* pulse effect no more active on visited elements */
@@ -772,7 +789,7 @@ Main components
   top: 50%;
   bottom: auto;
   right: auto;
-  background-color: #ea4a55;
+  background-color: #ed2024;
   -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
   -moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
   -ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
